--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,8 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="semanticui/semantic.min.css">
-
-    <script src="semanticui/semantic.min.js"></script>
+    <link rel="stylesheet" href="css/general.css">
 
     <!-- Polyfills -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
@@ -21,6 +20,17 @@
 </head>
 
 <body>
+    <top-nav></top-nav>
 
+    <main class="ui container">
+        <div class="ui gird">
+            <div class="sixteen wide column">
+                <sujeto-obligado></sujeto-obligado>
+            </div>
+        </div>
+    </main>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="semanticui/semantic.min.js"></script>
 </body>
 </html>
