--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,14 +20,7 @@
 
                 <div class="item">Porcentaje: <span id="fullPercent">0</span> %</div>
 
-                <div class="right menu">
-                    <div class="item">
-                        <a id="finish" href="#" class="ui primary button">Finalizar</a>
-                    </div>
-                    <div class="item">
-                        <a href="" id="resumen" class="ui button">Resumen</a>
-                    </div>
-                </div>
+                <div id="nav_actions" class="right menu"></div>
             </div>
         </nav>
 
